--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!-- Filter Buttons -->
             <div class="course-filter">
                 <button class="course-btn">All</button>
-                <button class="course-btn">CS</button>
+                <button class="course-btn">CSS</button>
                 <button class="course-btn">WDD</button>
                 <button class="course-btn">WD</button>
             </div>
