--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="chamber-logo.jpg">
   <meta property="og:url" content="https://www.TinapacalabarChamber.com">
   <title>Chamber Directory</title>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="images/Tinapacalabar.logo.jpeg" type="image/jpeg">
   <link rel="stylesheet" href="styles/mainchamber.css">
   <script defer src="scripts/directory.js"></script>
 </head>
