--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Chamber Directory">
   <meta property="og:type" content="website">
   <meta property="og:image" content="chamber-logo.jpg">
-  <meta property="og:url" content="https://www.TinapacalabarChamber.com">
+  <meta property="og:url" content="https://www.Tinapacalabarchamber.com">
   <title>Chamber Directory</title>
   <link rel="icon" href="images/Tinapacalabar.logo.jpeg" type="image/jpeg">
   <link rel="stylesheet" href="styles/mainchamber.css">
@@ -43,24 +43,24 @@
   <!-- Footer -->
   <footer>
     <div class="footer-left">
+      <p><strong>TinapaCalabar Chamber of Commerce</strong></p>
+      <p>31 Adam Duke Street, Calabar</p>
+      <p><a href="mailto:calabarchamberofcommerce@gmail.com">calabarchamberofcommerce@gmail.com</a></p>
+    </div>
+    <div class="footer-right">
       <p>&copy; <span id="currentyear"></span></p>
       <p>Designed and Developed by Benjamin Effiong - WDD231</p>
       <p id="lastModified">Last Modification: <span id="modificationDate"></span></p>
-    </div>
-    <div class="footer-right">
-      <p><strong>Calabar Chamber of Commerce</strong></p>
-      <p>31 Adam Duke Street</p>
-      <p><a href="mailto:calabarchamberofcommerce@gmail.com">calabarchamberofcommerce@gmail.com</a></p>
     </div>
     <nav class="sociallinks">
       <a href="https://www.facebook.com/">
         <img src="images/Facebook.svg" alt="Facebook">
       </a>
       <a href="https://www.youtube.com/">
-        <img src="images/youtube.svg" alt="YouTube">
+        <img src="images/instagram.svg" alt="YouTube">
       </a>
       <a href="https://www.instagram.com/">
-        <img src="images/instagram.svg" alt="Instagram">
+        <img src="images/youtube.svg" alt="Instagram">
       </a>
     </nav>
   </footer>  
