--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,14 +34,14 @@
   <main>
     <!-- Hero Section -->
     <section id="hero">
-      <img src="images/hero-image.jpg" alt="Welcome to Tinapacalabar Chamber of Commerce" class="hero-image">
+      <img src="images/Calabar-Aerial-View.jpeg" alt="Tinapacalabar Chamber of Commerce" class="hero-image">
       <div class="hero-content">
         <h1>Welcome to the TinapaCalabar Chamber of Commerce</h1>
         <p>Where Business and Culture Meet</p>
         <a href="join.html" class="cta-button">Join the Chamber</a>
       </div>
     </section>
-
+    
     <!-- Current Events Section -->
     <section id="events">
       <h2>Current Events</h2>
@@ -76,28 +76,27 @@
       </div>
     </section>
   </main>
-
   <!-- Footer -->
   <footer>
     <div class="footer-left">
+      <p><strong>TinapaCalabar Chamber of Commerce</strong></p>
+      <p>31 Adam Duke Street, Calabar</p>
+      <p><a href="mailto:calabarchamberofcommerce@gmail.com">calabarchamberofcommerce@gmail.com</a></p>
+    </div>
+    <div class="footer-right">
       <p>&copy; <span id="currentyear"></span></p>
       <p>Designed and Developed by Benjamin Effiong - WDD231</p>
       <p id="lastModified">Last Modification: <span id="modificationDate"></span></p>
-    </div>
-    <div class="footer-right">
-      <p><strong>Calabar Chamber of Commerce</strong></p>
-      <p>31 Adam Duke Street</p>
-      <p><a href="mailto:calabarchamberofcommerce@gmail.com">calabarchamberofcommerce@gmail.com</a></p>
     </div>
     <nav class="sociallinks">
       <a href="https://www.facebook.com/">
         <img src="images/Facebook.svg" alt="Facebook">
       </a>
       <a href="https://www.youtube.com/">
-        <img src="images/youtube.svg" alt="YouTube">
+        <img src="images/instagram.svg" alt="YouTube">
       </a>
       <a href="https://www.instagram.com/">
-        <img src="images/instagram.svg" alt="Instagram">
+        <img src="images/youtube.svg" alt="Instagram">
       </a>
     </nav>
   </footer>  
