--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="chamber-logo.jpg">
   <meta property="og:url" content="https://www.calabarchamber.com">
   <title>Home Page</title>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="images/Tinapacalabar.logo.jpeg" type="image/jpeg">
   <link rel="stylesheet" href="styles/mainchamber.css">
   <script defer src="scripts/directory.js"></script>
 </head>
@@ -41,7 +41,7 @@
         <a href="join.html" class="cta-button">Join the Chamber</a>
       </div>
     </section>
-    
+
     <!-- Current Events Section -->
     <section id="events">
       <h2>Current Events</h2>
