--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -31,15 +31,82 @@
       </ul>
     </nav>
   </header>  
-<main>
-    <section id="view-toggle">
-      <button id="toggleView">Toggle Grid/List View</button>
-    </section>
+  <main class="main">
+    <div class="main__section_container">
+        <h1>Chamber Directory</h1>
+        <div class="grid-list__btn_container">
+            <div>
+                <a href="#" class="grid__btn">
+                    <img src="images/grid-icon.svg" alt="Grid Icon" width="64" height="64">
+                </a>
+                <a href="#" class="list__btn">
+                    <img src="images/list-icon.svg" alt="List Icon" width="64" height="64">
+                </a>
+            </div>
+        </div>
+    <div class="chamber-card__container">
+        <!-- Transcorp Hotel -->
+        <section class="chamber__card">
+            <h3>Transcorp Hotel</h3>
+            <div>
+                <img src="https://example.com/transcorp-hotel-image.jpg" alt="Exterior view of Transcorp Hotel in Calabar, Nigeria" width="80" height="80">
+                <div class="chamber__card_text">
+                    <p><span>Address: </span>38/40 Murtala Mohammed Highway, Calabar, Cross River State, Nigeria</p>
+                    <p><span>Phone Number: </span>+234 803 123 4567</p>
+                    <p><span>URL: </span><a href="https://www.transcorphotels.com">https://www.transcorphotels.com</a></p>
+                    <p><span>Membership: </span>Gold</p>
+                </div>
+            </div>
+        </section>
 
-    <section id="members-list" class="list-view">
-      <!-- Member Cards will be displayed here -->
-    </section>
-  </main>
+        <!-- Calabar Marina Resort -->
+        <section class="chamber__card">
+            <h3>Calabar Marina Resort</h3>
+            <div>
+                <img src="https://example.com/calabar-marina-resort.jpg" alt="View of Calabar Marina Resort in Calabar, Nigeria" width="80" height="80">
+                <div class="chamber__card_text">
+                    <p><span>Address: </span>Marina Resort, Calabar, Cross River State, Nigeria</p>
+                    <p><span>Phone Number: </span>+234 809 123 4567</p>
+                    <p><span>URL: </span><a href="https://www.calabarmarinaresort.com">https://www.calabarmarinaresort.com</a></p>
+                    <p><span>Membership: </span>Silver</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Seaview Restaurant -->
+        <section class="chamber__card">
+            <h3>Seaview Restaurant</h3>
+            <div>
+                <img src="https://example.com/seaview-restaurant.jpg" alt="Exterior view of Seaview Restaurant in Calabar, Nigeria" width="80" height="80">
+                <div class="chamber__card_text">
+                    <p><span>Address: </span>123 Seaview Crescent, Calabar, Cross River State, Nigeria</p>
+                    <p><span>Phone Number: </span>+234 810 555 6789</p>
+                    <p><span>URL: </span><a href="https://www.seaviewcalabar.com">https://www.seaviewcalabar.com</a></p>
+                    <p><span>Membership: </span>Member</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Le Meridien Hotel -->
+        <section class="chamber__card">
+            <h3>Le Meridien Hotel</h3>
+            <div>
+                <img src="https://example.com/le-meridien-hotel.jpg" alt="Le Meridien Hotel in Calabar, Nigeria" width="80" height="80">
+                <div class="chamber__card_text">
+                    <p><span>Address: </span>Plot 1, Calabar Road, Calabar, Cross River State, Nigeria</p>
+                    <p><span>Phone Number: </span>+234 809 333 1234</p>
+                    <p><span>URL: </span><a href="https://www.lemeridiencalabar.com">https://www.lemeridiencalabar.com</a></p>
+                    <p><span>Membership: </span>Platinum</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- More businesses can be added similarly -->
+
+    </div>
+    </div>
+</main>
+  
   <!-- Footer -->
   <footer>
     <div class="footer-left">
