--- a/chamber/join.html
+++ b/chamber/join.html
@@ -46,10 +46,10 @@
                     <input type="text" id="last" name="last" required autocomplete="family-name" title="Your Last Name">
 
                     <label for="phone">Cell Phone <span>(required)</span></label>
-                    <input type="tel" id="phone" name="phone" required autocomplete="tel" placeholder="123-456-7891" title="Your Phone Number With Dashes">
+                    <input type="tel" id="phone" name="phone" required autocomplete="tel" placeholder="+234 8070 456 689" title="Your Phone Number With Dashes">
 
                     <label for="email">Email <span>(required)</span></label>
-                    <input type="email" id="email" name="email" required autocomplete="email" placeholder="example@email.com" title="Your Email">
+                    <input type="email" id="email" name="email" required autocomplete="email" placeholder="example@gmail.com" title="Your Email">
                 </fieldset>
 
                 <fieldset>
