--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -21,6 +21,9 @@
             <p><strong>Business Name:</strong> <span id="displayBusiness"></span></p>
             <p><strong>Membership Level:</strong> <span id="displayMembership"></span></p>
             <p><strong>Timestamp:</strong> <span id="displayTimestamp"></span></p>
+            <p><strong>Comments:</strong> <span id="displayComments"></span></p>
+            
+            
         </div>
 
         <a href="index.html">Go Back to Home</a>
