--- a/chamber/join.html
+++ b/chamber/join.html
@@ -9,15 +9,15 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="chamber-logo.jpg">
   <meta property="og:url" content="https://www.Tinapacalabarchamber.com">
-  <title>Join Page</title>
-  <link rel="icon" href="images/Tinapacalabar.logo.jpeg" type="image/jpeg">
+  <title>Join Page - Tinapacalabar Chamber of Commerce</title>
+  <link rel="icon" href="images/tinapacalabarlogo.jpg" type="image/jpeg">
   <link rel="stylesheet" href="styles/mainchamber.css">
   <script defer src="scripts/join.js"></script>
 </head>
 <body>
   <header class="header-container">
     <div class="logo-container">
-      <img src="images/Tinapacalabar.logo.jpeg" alt="Calabar Chamber of Commerce Logo" class="logo">
+      <img src="images/tinapacalabarlogo.jpg" alt="Calabar Chamber of Commerce Logo" class="logo">
       <span class="company-name">Chamber of Commerce</span>
     </div>
     <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" onclick="toggleMenu()">&#9776;</button>
@@ -138,19 +138,15 @@
 </main>
   <!-- Footer -->
   <footer>
-    <div class="footer-left">
-      <p><strong>TinapaCalabar Chamber of Commerce</strong></p>
-      <p>31 Adam Duke Street, Calabar</p>
-      <p><a href="mailto:calabarchamberofcommerce@gmail.com">calabarchamberofcommerce@gmail.com</a></p>
-    </div>
-    <div class="footer-right">
-      <p>&copy; <span id="currentyear"></span></p>
-      <p>Designed and Developed by Benjamin Effiong - WDD231</p>
-      <p id="lastModified">Last Modification: <span id="modificationDate"></span></p>
-    </div>
+  <div class="footer-left">
+    <p><strong>TinapaCalabar Chamber of Commerce</strong></p>
+    <p>31 Adam Duke Street, Calabar, Cross river</p>
+    <p>+234 803 123 4567</p>
+    <p><a href="mailto:calabarchamberofcommerce@gmail.com">calabarchamberofcommerce@gmail.com</a></p>
+    
     <nav class="sociallinks">
       <a href="https://www.facebook.com/">
-        <img src="images/Facebook.svg" alt="Facebook">
+        <img src="images/facebook.svg" alt="Facebook">
       </a>
       <a href="https://www.youtube.com/">
         <img src="images/instagram.svg" alt="YouTube">
@@ -159,6 +155,12 @@
         <img src="images/youtube.svg" alt="Instagram">
       </a>
     </nav>
-  </footer>  
+  </div>
+  <div class="footer-right">
+    <p>&copy; <span id="currentyear"></span></p>
+    <p>Designed and Developed by Benjamin Effiong - WDD231</p>
+    <p id="lastModified">Last Modification: <span id="modificationDate"></span></p>
+  </div>
+</footer>
 </body>
 </html>
