--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Chamber of Commerce Directory for businesses in Calabar">
+  <meta name="description" content="Welcome to the TinapaCalabar Chamber of Commerce, promoting business growth and networking in Calabar. Join us to connect and grow.">
   <meta name="author" content="Benjamin Amos Effiong">
   <!-- Social Media Meta -->
-  <meta property="og:title" content="Chamber Directory">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="chamber-logo.jpg">
+  <meta property="og:title" content="Chamber Directory - TinapaCalabar Chamber of Commerce">
+  <meta property="og:description" content="Explore business opportunities and community networking in Calabar with our vibrant Chamber of Commerce.">
+  <meta property="og:image" content="images/chamber-logo.jpg">
   <meta property="og:url" content="https://www.tinapacalabarchamber.com">
+  <meta property="og:type" content="website">
   <title>Chamber Directory - Tinapacalabar Chamber of Commerce</title>
   <link rel="icon" href="images/tinapacalabarlogo.jpg" type="image/jpeg">
   <link rel="stylesheet" href="styles/mainchamber.css">
@@ -18,8 +19,8 @@
 <body>
   <header class="header-container">
     <div class="logo-container">
-      <img src="images/tinapacalabarlogo.jpg" alt="Calabar Chamber of Commerce Logo" class="logo">
-      <span class="company-name">Chamber of Commerce</span>
+      <img src="images/tinapacalabarlogo.jpg" alt="TinapaCalabar Chamber of Commerce Logo" class="logo">
+      <span id="company-name">Chamber of Commerce</span>
     </div>
     <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" onclick="toggleMenu()">&#9776;</button>
     <nav class="menu" role="navigation">
@@ -34,7 +35,7 @@
   </header>  
   <main class="main">
     <section class="main__section_container">
-      <h1>Business Directory</h1>
+      <h1>Chamber Directory</h1>
       <div class="grid-list__btn_container">
         <button id="grid-view" aria-label="Grid view">
           <img src="images/gridicon.svg" alt="Grid View" width="32" />
@@ -52,8 +53,7 @@
     <p><strong>TinapaCalabar Chamber of Commerce</strong></p>
     <p>31 Adam Duke Street, Calabar, Cross river</p>
     <p>+234 803 123 4567</p>
-    <p><a href="mailto:calabarchamberofcommerce@gmail.com">calabarchamberofcommerce@gmail.com</a></p>
-    
+    <p><a href="mailto:calabarchamberofcommerce@gmail.com">Email Us</a></p>
     <nav class="sociallinks">
       <a href="https://www.facebook.com/">
         <img src="images/facebook.svg" alt="Facebook">
