--- a/chamber/join.html
+++ b/chamber/join.html
@@ -142,7 +142,7 @@
     <p><strong>TinapaCalabar Chamber of Commerce</strong></p>
     <p>31 Adam Duke Street, Calabar, Cross river</p>
     <p>+234 803 123 4567</p>
-    <p><a href="mailto:calabarchamberofcommerce@gmail.com">calabarchamberofcommerce@gmail.com</a></p>
+    <p><a href="mailto:calabarchamberofcommerce@gmail.com">Email Us</a></p>
     
     <nav class="sociallinks">
       <a href="https://www.facebook.com/">
