--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,11 +6,11 @@
   <meta name="description" content="Welcome to the TinapaCalabar Chamber of Commerce, promoting business growth and networking in Calabar. Join us to connect and grow.">
   <meta name="author" content="Benjamin Amos Effiong">
   <!-- Social Media Meta -->
-  <meta property="og:title" content="Chamber Directory - TinapaCalabar Chamber of Commerce">
-  <meta property="og:description" content="Explore business opportunities and community networking in Calabar with our vibrant Chamber of Commerce.">
-  <meta property="og:image" content="images/chamber-logo.jpg">
-  <meta property="og:url" content="https://www.tinapacalabarchamber.com">
+  <meta property="og:title" content="Tinapa Calabar Chamber of Commerce">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.tinapacalabarchamber.com">
+  <meta property="og:image" content="images/tinapacalabarlogo.jpg">
+  <meta property="og:description" content="Connecting businesses in Calabar and beyond.">
   <title>Chamber Directory - Tinapacalabar Chamber of Commerce</title>
   <link rel="icon" href="images/tinapacalabarlogo.jpg" type="image/jpeg">
   <link rel="stylesheet" href="styles/mainchamber.css">
@@ -53,7 +53,9 @@
     <p><strong>TinapaCalabar Chamber of Commerce</strong></p>
     <p>31 Adam Duke Street, Calabar, Cross river</p>
     <p>+234 803 123 4567</p>
-    <p><a href="mailto:calabarchamberofcommerce@gmail.com">Email Us</a></p>
+    <a href="mailto:calabarchamberofcommerce@gmail.com">
+    <span class="sr-only">Email:</span> calabarchamberofcommerce@gmail.com
+    </a>
     <nav class="sociallinks">
       <a href="https://www.facebook.com/">
         <img src="images/facebook.svg" alt="Facebook">
