--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -53,9 +53,7 @@
     <p><strong>TinapaCalabar Chamber of Commerce</strong></p>
     <p>31 Adam Duke Street, Calabar, Cross river</p>
     <p>+234 803 123 4567</p>
-    <a href="mailto:calabarchamberofcommerce@gmail.com">
-    <span class="sr-only">Email:</span> calabarchamberofcommerce@gmail.com
-    </a>
+    <p><a href="mailto:calabarchamberofcommerce@gmail.com">Email Us</a></p>
     <nav class="sociallinks">
       <a href="https://www.facebook.com/">
         <img src="images/facebook.svg" alt="Facebook">
