--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,74 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="The Calabar Chamber of Commerce is a key organization that promotes business growth, fosters economic development, and advocates for the interests of businesses in Calabar and its surrounding regions. It serves as a platform for businesses, entrepreneurs, and industry leaders to collaborate, network, and explore opportunities for expansion.">
+  <meta name="description" content="Welcome to the TinapaCalabar Chamber of Commerce, promoting business growth and networking in Calabar. Join us to connect and grow.">
   <meta name="author" content="Benjamin Amos Effiong">
-  <meta property="og:title" content="Home page">
+  <!-- Social Media Meta -->
+  <meta property="og:title" content="Tinapa Calabar Chamber of Commerce">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="chamber-logo.jpg">
-  <meta property="og:url" content="https://www.calabarchamber.com">
-  <title>Home Page - Tinapacalabar Chamber of Commerce</title>
+  <meta property="og:url" content="https://www.tinapacalabarchamber.com">
+  <meta property="og:image" content="images/tinapacalabarlogo.jpg">
+  <meta property="og:description" content="Connecting businesses in Calabar and beyond.">
+  <title>Home page - Tinapacalabar Chamber of Commerce</title>
   <link rel="icon" href="images/tinapacalabarlogo.jpg" type="image/jpeg">
   <link rel="stylesheet" href="styles/mainchamber.css">
   <script defer src="scripts/home.js"></script>
 </head>
 <body>
-    <header class="header-container">
-        <div class="logo-container">
-          <img src="images/tinapacalabarlogo.jpg" alt="Tinapacalabar Chamber of Commerce Logo" class="logo">
-          <span class="company-name">Chamber of Commerce</span>
-        </div>
-        <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" onclick="toggleMenu()">&#9776;</button>
-        <nav class="menu" role="navigation">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="discover.html">Discover</a></li>
-            <li><a href="directory.html">Directory</a></li>
-            <li><a href="join.html">Join</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
-        </nav>
-      </header>      
+  <header class="header-container">
+    <div class="logo-container">
+      <img src="images/tinapacalabarlogo.jpg" alt="TinapaCalabar Chamber of Commerce Logo" class="logo">
+      <span id="company-name">Chamber of Commerce</span>
+    </div>
+    <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" onclick="toggleMenu()">&#9776;</button>
+    <nav class="menu" role="navigation">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="discover.html">Discover</a></li>
+        <li><a href="directory.html">Directory</a></li>
+        <li><a href="join.html">Join</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+  </header>  
   <main>
     <!-- Hero Section -->
-    <section id="hero">
-      <img src="images/Calabar-Aerial-View.jpeg" alt="Tinapacalabar Chamber of Commerce" class="hero-image">
+    <section id="hero" aria-label="Hero">
+      <img src="images/Calabar-Aerial-View.jpeg" alt="Aerial view of Calabar" class="hero-image" />
       <div class="hero-content">
-        <h1>Welcome to the TinapaCalabar Chamber of Commerce</h1>
+        <h1>Welcome to TinapaCalabar Chamber of Commerce</h1>
         <p>Where Business and Culture Meet</p>
-        <a href="join.html" class="cta-button">Join the Chamber</a>
+        <a href="join.html" class="cta-button" role="button">Join the Chamber</a>
       </div>
     </section>
-     <!-- Current Events Section -->
-     <section id="events">
-      <h2>Current Events</h2>
-      <ul>
-          <li><strong>Business Expo 2025:</strong> February 10th, 2025 at the City Center.</li>
-          <li><strong>Networking Night:</strong> March 15th, 2025 at the Royal Hotel.</li>
-      </ul>
-  </section>
-  <!-- Weather Section -->
-  <section id="weather">
-      <h2>Weather in Calabar</h2>
-      <p>Stay updated with the current weather to plan your day.</p>
-      <div id="weather-widget">
-          <!-- Weather data will be populated by JavaScript -->
+    <section class="home-event-and-weather">
+      <!-- events -->
+      <div id="events">
+        <h2>Current Events</h2>
+        <ul>
+          <li><strong>Business Expo 2026:</strong> February 10th, 2026 at the City Center.</li>
+          <li><strong>Networking Night:</strong> March 15th, 2026 at the Royal Hotel.</li>
+        </ul>
+      </div>
+      <!-- weather  -->
+      <div id="weather">
+        <h2>Weather in Calabar</h2>
+        <p>Stay updated with the current weather to plan your day.</p>
+        <div id="weather-widget">
           <p id="current-weather">Loading weather...</p>
-          <div id="forecast">
-              <h3>3-Day Forecast</h3>
-              <ul id="forecast-list">
-                  <!-- Forecast data will be populated by JavaScript -->
-              </ul>
-          </div>
+        </div>
+        <div id="forecast">
+          <h3>3-Day Forecast</h3>
+          <ul id="forecast-list"></ul>
+        </div>
       </div>
-  </section>
-  <!-- Company Spotlights Section -->
-  <section id="spotlights">
-      <h2>Company Spotlights</h2>
-      <div id="spotlight-cards">
-          <!-- Spotlight cards will be populated by JavaScript -->
-      </div>
-  </section>
+    </section>
+    <section class="spotlights" aria-label="Featured Chamber Members">
+      <h2>Member Spotlights</h2>
+      <div class="spotlight-container" id="spotlight-container"></div>
+    </section>
   </main>
   <!-- Footer -->
   <footer>
@@ -79,7 +77,6 @@
     <p>31 Adam Duke Street, Calabar, Cross river</p>
     <p>+234 803 123 4567</p>
     <p><a href="mailto:calabarchamberofcommerce@gmail.com">Email Us</a></p>
-    
     <nav class="sociallinks">
       <a href="https://www.facebook.com/">
         <img src="images/facebook.svg" alt="Facebook">
