--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
   <main>
     <!-- Hero Section -->
     <section id="hero" aria-label="Hero">
-      <img src="images/Calabar-Aerial-View.jpeg" alt="Aerial view of Calabar" class="hero-image" />
+      <img src="images/calabarview.jpeg" alt="Aerial view of Calabar" class="hero-image" />
       <div class="hero-content">
         <h1>Welcome to TinapaCalabar Chamber of Commerce</h1>
         <p>Where Business and Culture Meet</p>
