--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You for Joining</title>
-    <link rel="stylesheet" href="styles.css"> <!-- External CSS Link -->
+    <link rel="stylesheet" href="styles/mainchamber.css"> <!-- External CSS Link -->
     <script defer src="scripts/join.js"></script> <!-- External JavaScript Link -->
 </head>
 <body>
@@ -30,11 +30,3 @@
     </main>
 </body>
 </html>
-
-<!-- index.html -->
-<!DOCTYPE html>
-<html lang="en">
-
-    
-    
-   
