--- a/chamber/index.html
+++ b/chamber/index.html
@@ -74,7 +74,7 @@
   <footer>
   <div class="footer-left">
     <p><strong>TinapaCalabar Chamber of Commerce</strong></p>
-    <p>31 Adam Duke Street, Calabar, Cross river</p>
+    <p>31 Adam Duke Street, Calabar, Cross River</p>
     <p>+234 803 123 4567</p>
     <p><a href="mailto:calabarchamberofcommerce@gmail.com">Email Us</a></p>
     <nav class="sociallinks">
