--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Chamber of Commerce Directory for businesses in Calabar">
+  <meta name="description" content="Join us to build and promote Tinapacalabar Chamber of Commerce for businesses in Calabar">
   <meta name="author" content="Benjamin Amos Effiong">
-  <meta property="og:title" content="Chamber Directory">
+ <!-- Social Media Meta -->
+  <meta property="og:title" content="Tinapa Calabar Chamber of Commerce">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="chamber-logo.jpg">
-  <meta property="og:url" content="https://www.Tinapacalabarchamber.com">
+  <meta property="og:url" content="https://www.tinapacalabarchamber.com">
+  <meta property="og:image" content="images/tinapacalabarlogo.jpg">
+  <meta property="og:description" content="Connecting businesses in Calabar and beyond.">
   <title>Join Page - Tinapacalabar Chamber of Commerce</title>
   <link rel="icon" href="images/tinapacalabarlogo.jpg" type="image/jpeg">
   <link rel="stylesheet" href="styles/mainchamber.css">
@@ -18,7 +20,7 @@
   <header class="header-container">
     <div class="logo-container">
       <img src="images/tinapacalabarlogo.jpg" alt="Calabar Chamber of Commerce Logo" class="logo">
-      <span class="company-name">Chamber of Commerce</span>
+      <span id="company-name">Chamber of Commerce</span>
     </div>
     <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" onclick="toggleMenu()">&#9776;</button>
     <nav class="menu" role="navigation">
